Fri May 18 18:10:36 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed nickname formatting to handle already formatted nicknames
	  better.  Affected file is lib/silccilent/client_entry.c.

	* Added "foo#2 appears as foo" support to SILC Client when user
	  leaves or quits and one formatted nickname remain.  Affected file 
	  is apps/irssi/src/silc/core/client_ops.c.

	* Send SilcChannelEntry to application in SILC_NOTIFY_TYPE_SIGNOFF.
	  Affected file is lib/silcclient/client_notify.c.

Thu May 17 18:05:10 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed silc_show_public_key to not free public key in case of
	  failure.  Affected file is lib/silcapputil/silcapputil.c.

Thu May 17 17:09:50 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* SILC Toolkit 1.1 Beta3.

	* Porting Toolkit to Symbian.  It should work while some sporadic
	  odd crashes remain.  However I was able to run mybot on SILCNet.
	  Basically tested scheduler, net routines, socket  routines,
	  threads and some other utility routines.  Affected files are
	  in lib/silcutil/symbian/.

Thu May 17 11:57:40 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Show realname and email address from public key when verifying
	  cached public keys with GETKEY.  Affected files are
	  apps/irssi/src/fe-common/module-formats.[ch] and
	  apps/irssi/src/silc/core/client_ops.c.

Wed May 16 20:41:04 CEST 2007  Jochen Eisinger <coffee@silcnet.org>

	* Include SILC Plugin theme.  Affected file is apps/irssi/plugin.theme

	* Include SILC Plugin /silc command help.  Affected file is
	  apps/irssi/docs/help/silc

	* Create channels before joining them.  Affected file is
	  apps/irssi/src/silc/core/client_ops.c

Wed May 16 18:59:22 EEST 2007  Pekka Riikonen <priikone@silcnet.org>

	* Fixed channel private key listing with /key.  Affected file
	  is apps/irssi/src/silc/core/silc-channels.c.

	* Fixed the public headers from anonymous structures.  Affected
	  files are lib/.
