@@ -1,3 +1,13 @@
+Fri May 18 21:10:38 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Do not uninitialize u.m.threads atomic int in finish but in
+	  free.  Fixes crash on any platform using atomic operations
+	  using mutexes (like Symbian).  Affected file is
+	  lib/silcutil/silcfsm.c.
+
+	* Fixes Symbian scheduler wakeup synchronization.  Affected file
+	  is lib/silcutil/symbian/silcsymbianscheduler.c.
+
 Fri May 18 18:10:36 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed nickname formatting to handle already formatted nicknames
